--- a/MyTrade/Views/Admin/PayoutDetailForAdmin.cshtml
+++ b/MyTrade/Views/Admin/PayoutDetailForAdmin.cshtml
@@ -49,7 +49,7 @@
                                     <label>
                                         Payout No.
                                     </label>
-                                    @Html.DropDownListFor(m => m.PayoutNo, new SelectList(ViewBag.Payout, "Value", "Text"),"-Select-", new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.PayoutNo, new SelectList(ViewBag.Payout, "Value", "Text"),"-Select-", new { @class = "default-select wide form-control" })
                                     <input type="hidden" id="hdf" value="@Model.PayoutNo" />
                                     @*@Html.TextBoxFor(m => m.PayoutNo, new { @class = "form-control", @Placeholder = "Payout No" })*@
                                 </div>
