--- a/MyTrade/Views/Admin/UnUsedPinList.cshtml
+++ b/MyTrade/Views/Admin/UnUsedPinList.cshtml
@@ -29,7 +29,7 @@
                             <div class="col-lg-3">
                                 <div class="form-group">
                                     <label>Package  </label>
-                                    @Html.DropDownListFor(m => m.Package, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.Package, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "default-select wide form-control" })
                                 </div>
                             </div>
                             <div class="col-lg-3">
