--- a/MyTrade/Views/AdminReports/DirectListForAdmin.cshtml
+++ b/MyTrade/Views/AdminReports/DirectListForAdmin.cshtml
@@ -33,8 +33,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3">
-                                                    <div class="form-group">
-                                                        <br />
+                                                    <div class="form-group mt-2">
                                                         <input type="submit" id="btnSearch" class="btn btn-success pull-left mt-3" name="Search" value="Search" onclick="return ValidateForm();" />
                                                     </div>
                                                 </div>
