--- a/MyTrade/Views/AdminReports/RechargeListForAdmin.cshtml
+++ b/MyTrade/Views/AdminReports/RechargeListForAdmin.cshtml
@@ -39,8 +39,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-3">
-                                <div class="form-group">
-                                    <br />
+                                <div class="form-group mt-3">
                                     <input type="submit" id="btnSearch" class="btn btn-success" name="Search" value="Search" style="margin-top:15px;" />
                                 </div>
                             </div>
