--- a/MyTrade/Views/EmployeeRegistration/EmployeeRegistration.cshtml
+++ b/MyTrade/Views/EmployeeRegistration/EmployeeRegistration.cshtml
@@ -27,7 +27,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label class="col-form-label">User Type <span style="color: red">*</span></label>
-                                        @Html.DropDownListFor(m => m.Fk_UserTypeId, new SelectList(ViewBag.ddlUserType, "Value", "Text"), new { @class = "form-control" })
+                                        @Html.DropDownListFor(m => m.Fk_UserTypeId, new SelectList(ViewBag.ddlUserType, "Value", "Text"), new { @class = "default-select wide form-control" })
                                     </div>
                             </div>
                             <div class="col-md-4">
