--- a/MyTrade/Views/Shared/_Layout.cshtml
+++ b/MyTrade/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
     <title>@ViewBag.Title</title>
-    <link rel="icon" type="image/x-icon" href="~/assets/img/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/MytradeWebsite/assets/img/favicon.png" />
     @*<link href="~/assets/css/loader.css" rel="stylesheet" type="text/css" />
     <script src="~/assets/js/loader.js"></script>*@
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
@@ -30,7 +30,7 @@
    
     <link rel="stylesheet" type="text/css" href="~/plugins/table/datatable/dt-global_style.css">*@
     @*<link href="~/assets/css/scrollspyNav.css" rel="stylesheet" type="text/css" />*@
-    <link href="~/plugins/apex/apexcharts.css" rel="stylesheet" type="text/css">
+    @*<link href="~/plugins/apex/apexcharts.css" rel="stylesheet" type="text/css">*@
     @*<style>
         .errortext {
             border: 2px solid red !important;
@@ -69,7 +69,7 @@
 
 </head>
 <body>
-    <!-- BEGIN LOADER -->
+    <!-- BEGIN LOADER --
     <div id="load_screen">
         <div class="loader">
             <div class="loader-content">
@@ -256,8 +256,8 @@
     <script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>
     <script src="~/bootstrap/js/popper.min.js"></script>
     <script src="~/bootstrap/js/bootstrap.min.js"></script>
-    <script src="~/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-    <script src="~/assets/js/app.js"></script>
+    @*<script src="~/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+    <script src="~/assets/js/app.js"></script>*@
 
     <!-- Required vendors -->
     <script src="/UserPanel/vendor/global/global.min.js"></script>
@@ -269,7 +269,7 @@
     <script src="/UserPanel/vendor/peity/jquery.peity.min.js"></script>
 
     <!-- Apex Chart -->
-    <script src="/UserPanel/vendor/apexchart/apexchart.js"></script>
+    @*<script src="/UserPanel/vendor/apexchart/apexchart.js"></script>*@
     <script src="/UserPanel/vendor/owl-carousel/owl.carousel.js"></script>
     <!-- Datatable -->
     <script src="/UserPanel/vendor/datatables/js/jquery.dataTables.min.js"></script>
@@ -288,13 +288,13 @@
             App.init();
         });
     </script>
-    <script src="~/plugins/highlight/highlight.pack.js"></script>
+    @*<script src="~/plugins/highlight/highlight.pack.js"></script>
     <script src="~/assets/js/custom.js"></script>
-    <script src="~/assets/js/scrollspyNav.js"></script>
+    <script src="~/assets/js/scrollspyNav.js"></script>*@
 
     <!-- END GLOBAL MANDATORY SCRIPTS -->
-    <script src="~/assets/js/scrollspyNav.js"></script>
-    <script src="~/plugins/table/datatable/datatables.js"></script>
+    @*<script src="~/assets/js/scrollspyNav.js"></script>*@
+    @*<script src="~/plugins/table/datatable/datatables.js"></script>*@
     <!-- NOTE TO ~/Use Copy CSV Excel PDF Print Options You Must Include These Files  -->
     @*<script src="~/plugins/table/datatable/button-ext/dataTables.buttons.min.js"></script>
     <script src="~/plugins/table/datatable/button-ext/jszip.min.js"></script>
@@ -311,9 +311,9 @@
 
 		});
     </script>
-    <script src="/plugins/apex/apexcharts.min.js"></script>
-    <script src="/plugins/apex/custom-apexcharts.js"></script>
-    <script>
+    @*<script src="/plugins/apex/apexcharts.min.js"></script>
+    <script src="/plugins/apex/custom-apexcharts.js"></script>*@
+    @*<script>
     // Donut Chart
     var donutChart = {
         chart: {
@@ -377,7 +377,7 @@
     );
 
     donut.render();
-    </script>
+    </script>*@
 
     <script>
         $('#html5-extension').DataTable( {
