--- a/MyTrade/UserPanel/css/style.css
+++ b/MyTrade/UserPanel/css/style.css
@@ -2885,7 +2885,7 @@ textarea.form-control {
   border-radius: 0.75rem; }
   .dropdown-menu[data-bs-popper] {
     top: 100%;
-    left: 0;
+    /*left: 0;*/
     margin-top: 0.125rem; }
 
 .dropdown-menu-start {
