--- a/MyTrade/Views/Admin/AdminDashboard.cshtml
+++ b/MyTrade/Views/Admin/AdminDashboard.cshtml
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </div>
-        <div id="chartDonut" class="col-xl-6 layout-spacing">
+        @*<div id="chartDonut" class="col-xl-6 layout-spacing">
             <div class="statbox widget box box-shadow">
                 <div class="widget-header">
                     <div class="row">
@@ -92,6 +92,6 @@
                     <div id="PayoutDetails" class=""></div>
                 </div>
                 </div>
-            </div>
+            </div>*@
         </div>
     </div>
