--- a/MyTrade/Views/Admin/AdvanceDeduction.cshtml
+++ b/MyTrade/Views/Admin/AdvanceDeduction.cshtml
@@ -45,7 +45,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     Advance/Deduction<span style="color: red">*</span>
-                                    <select id="DeductionType" name="DeductionType" class="form-control">
+                                    <select id="DeductionType" name="DeductionType" class="default-select wide form-control">
                                         <option value="0">-Select-</option>
                                         <option value="Advance">Advance</option>
                                         <option value="Deduction">Deduction</option>
