--- a/MyTrade/Views/Admin/BusinessReports.cshtml
+++ b/MyTrade/Views/Admin/BusinessReports.cshtml
@@ -61,13 +61,13 @@
                             <div class="col-lg-3 col-md-3">
                                 <div class="form-group">
                                     <label> Package Type</label>
-                                    @Html.DropDownListFor(m => m.PK_ProductID, new SelectList(ViewBag.ddlProductName, "Value", "Text"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.PK_ProductID, new SelectList(ViewBag.ddlProductName, "Value", "Text"), new { @class = "default-select wide form-control" })
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-3">
                                 <div class="form-group">
                                     <label>Level</label>
-                                    <select id="Level" name="Level" class = "form-control">
+                                    <select id="Level" name="Level" class = "default-select wide form-control">
                                         <option value="0">-select-</option>
                                         <option value="1">Level-1</option>
                                         <option value="2">Level-2</option>
@@ -94,12 +94,12 @@
                             </div>
                             <div class="col-lg-3 col-md-3" style="margin-top:28px">
                                 <div class="form-group">
-                                    <input class="btn btn-success pull-left" type="submit" value="Get Details" id="GetDetails" name="GetDetails"  onclick="return Validate()"  />
+                                    <input class="btn btn-success" type="submit" value="Get Details" id="GetDetails" name="GetDetails"  onclick="return Validate()"  />
                                 </div>
                             </div>
                         </div>
                         <div class="row">
-                            <table id="html5-extension" class="table table-hover non-hover" ,data-page-length='25'>
+                            <table id="html5-extension" class="table table-hover non-hover" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
