--- a/MyTrade/Views/Admin/KYCUpdateDeatilsOfUser.cshtml
+++ b/MyTrade/Views/Admin/KYCUpdateDeatilsOfUser.cshtml
@@ -27,7 +27,7 @@
                                 <div class="form-group">
                                     <label>Status</label>
                                     <input type="hidden" id="IsVeri" value="@Model.IsVerified" />
-                                    <select id="IsVerified" name="IsVerified" class="form-control">
+                                    <select id="IsVerified" name="IsVerified" class="default-select wide form-control">
                                         <option value="">-Select-</option>
                                         <option value="1">Verified</option>
                                         <option value="0">Pending</option>
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                       
-
+                         <div class="mt-3">
                             <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                                 <thead>
                                     <tr>
@@ -97,9 +97,9 @@
                                                     <td>@Item.Status</td>
                                                     @if (Item.IsVerified == "False" && Item.Status!="Declined")
                                                     {
-                                                        <td>
-                                                            <a href="/AdminReports/ViewProfileVeriFy?Id=@Item.Fk_UserId" name="Verify" id="Verify" class="btn btn-success">Verify</a>
-                                                            <a href="/AdminReports/DeclineKyc?Id=@Item.Fk_UserId" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to decline this kyc?')">Decline</a>
+                                                        <td class="d-flex">
+                                                            <a href="/AdminReports/ViewProfileVeriFy?Id=@Item.Fk_UserId" name="Verify" id="Verify" class="m-1 btn btn-success">Verify</a>
+                                                            <a href="/AdminReports/DeclineKyc?Id=@Item.Fk_UserId" class="m-1 btn btn-danger" onclick="return confirm('Are you sure you want to decline this kyc?')">Decline</a>
                                                         </td>
                                                     }
                                                     else if (Item.Status == "Declined")
@@ -133,6 +133,7 @@
                                     }
                                 </tbody>
                             </table>
+                             </div>
                     </div>
                 </div>
             </div>
