--- a/MyTrade/Views/Admin/PayoutRequestList.cshtml
+++ b/MyTrade/Views/Admin/PayoutRequestList.cshtml
@@ -57,7 +57,7 @@
                                 <div class="form-group">
                                     <label>Status</label>
                                     <input type="hidden" id="st" value="@Model.Status" />
-                                    <select id="Status" name="Status" class="form-control">
+                                    <select id="Status" name="Status" class="default-select wide form-control">
                                         <option value="0">-Select-</option>
                                         <option value="Approved">Approve</option>
                                         <option value="Declined">Decline</option>
@@ -65,9 +65,9 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-3" style="margin-top:28px">
-                                <div class="form-group">
-                                    <input class="btn btn-success pull-left" type="submit" value="Search" id="btnSearch" name="btnSearch" />
+                            <div class="col-lg-3 col-md-3">
+                                <div class="form-group mt-1">
+                                    <input class="btn btn-success" type="submit" value="Search" id="btnSearch" name="btnSearch" />
                                 </div>
                             </div>
                         </div>
