--- a/MyTrade/Views/Admin/TopUp.cshtml
+++ b/MyTrade/Views/Admin/TopUp.cshtml
@@ -38,7 +38,7 @@
                             <input type="hidden" id="amt" />
                             <input type="hidden" id="pkg" />
                             <label for="Package">Package <span style="color:red">*</span></label>
-                            @Html.DropDownListFor(m => m.PackageId, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "form-control", @onchange="return GetPackageDetails();" })
+                            @Html.DropDownListFor(m => m.PackageId, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "default-select wide form-control", @onchange="return GetPackageDetails();" })
                             <p class="text-success" id="spName"></p>
                         </div>
                         <div class="col-md-4">
