--- a/MyTrade/Views/AdminReports/ActivateByPaymentList.cshtml
+++ b/MyTrade/Views/AdminReports/ActivateByPaymentList.cshtml
@@ -36,7 +36,7 @@
                             <div class="col-lg-3">
                                 Type
                                 <input type="hidden" id="UseFor" value="@Model.UsedFor" />
-                               <select id="UsedFor" name="UsedFor" class="form-control">
+                               <select id="UsedFor" name="UsedFor" class="default-select wide form-control">
                                    <option value="0">Select</option>
                                    <option value="Wallet">Wallet</option>
                                    <option value="Activation">Activation</option>
@@ -47,7 +47,7 @@
                             </div>
                         </div>
 
-                        <div class="mt-3">
+                        <div class="mt-4">
                             <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                                 <thead>
                                     <tr>
