--- a/MyTrade/Views/AdminReports/AssociateList.cshtml
+++ b/MyTrade/Views/AdminReports/AssociateList.cshtml
@@ -63,7 +63,7 @@
                             <div class="col-lg-3">
                                 <div class="form-group">
                                     <label>Status</label>
-                                    @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlstatus, "Value", "Text"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlstatus, "Value", "Text"), new { @class = "default-select wide form-control" })
                                 </div>
                             </div>
                             @*<div class="col-lg-3">
@@ -89,7 +89,7 @@
                             </div>
                             <div class="col-lg-2" id="divLeg" style="display:none">
                                 Leg
-                                @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlLeg, "Value", "Text"), new { @class = "form-control" })
+                                @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlLeg, "Value", "Text"), new { @class = "default-select wide form-control" })
                             </div>
                             <div class="col-lg-3">
                                 Mobile No.
