--- a/MyTrade/Views/AdminReports/WalletLedger.cshtml
+++ b/MyTrade/Views/AdminReports/WalletLedger.cshtml
@@ -34,7 +34,7 @@
                                 <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
                             </div>
                         </div>
-                  
+                        <div class="mt-4">
                             <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                                 <thead>
                                     <tr>
@@ -82,6 +82,7 @@
                                 </tfoot>
                             </table>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
