--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -29,13 +29,8 @@
     <link href="/UserPanel/vendor/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
    
     <link rel="stylesheet" type="text/css" href="~/plugins/table/datatable/custom_dt_html5.css">
-    @*<meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-        <title>@ViewBag.Title</title>
-        <link rel="icon" type="image/png" href="/MytradeWebsite/assets/img/favicon.png">
-        <link href="~/assets/css/loader.css" rel="stylesheet" type="text/css" />
-        <script src="~/assets/js/loader.js"></script>*@
+        @*<link href="~/assets/css/loader.css" rel="stylesheet" type="text/css" />
+    <script src="~/assets/js/loader.js"></script>*@
     <!-- BEGIN GLOBAL MANDATORY STYLES --
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
     <link href="~/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -978,17 +973,17 @@
 
 
     <!-- Chart piety plugin files -->
-    <script src="./vendor/peity/jquery.peity.min.js"></script>
+   @* <script src="./vendor/peity/jquery.peity.min.js"></script>*@
 
     <!-- Apex Chart -->
     @*<script src="./vendor/apexchart/apexchart.js"></script>*@
-    <script src="./vendor/owl-carousel/owl.carousel.js"></script>
+    @*<script src="./vendor/owl-carousel/owl.carousel.js"></script>*@
 
     <!-- Dashboard 2 -->
-    <script src="./js/dashboard/dashboard-4.js"></script>
+    @*<script src="./js/dashboard/dashboard-4.js"></script>
     <script src="./js/deznav-init.js"></script>
     <script src="./js/demo.js"></script>
-    <script src="./js/styleSwitcher.js"></script>
+    <script src="./js/styleSwitcher.js"></script>*@
 
 
     <!-- Required vendors -->
